--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,8 +9,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="br.com.opps.movibus.MainActivity"
     tools:showIn="@layout/app_bar_main"
-    app:umanoPanelHeight="60dp"
-    app:umanoShadowHeight="16dp">
+    app:umanoPanelHeight="56dp"
+    app:umanoShadowHeight="0dp"
+    app:umanoFadeColor="@color/colorPrimaryDark">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,9 +27,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="8dp"
-            android:layout_marginHorizontal="16dp"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryDark">
 
             <TextView
                 android:text="Alguma coisa 2"
