--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#f1c40f</color>
     <color name="colorPrimaryDark">#f39c12</color>
     <color name="colorAccent">#fa6800</color>
+    <color name="white">#ffffff</color>
+    <color name="cinza">#d6d3d1</color>
 </resources>
